feat: Update Problem Documentation

--- a/problem/main.tex
+++ b/problem/main.tex
@@ -210,4 +210,41 @@
 بنابراین معماری \متن‌لاتین{NFV} توصیف شده توسط \متن‌لاتین{ETSI} راه‌حلی با قابلیت مشارکت و هماهنگی چندین تولیدکننده مختلف را دارد.
 مؤلفه‌های اصلی چارچوب معماری \متن‌لاتین{NFV} که در \رجوع{fig:nfv-architecture} دیده می‌شوند عبارتند از:
 
+\شروع{فقرات}
+\فقره[\متن‌لاتین{NFVI}] شامل منابع سخت افزاری و نرم افزاری لازم برای اجرای \متن‌لاتین{VNF}ها
+\فقره[\متن‌لاتین{Service}]: شامل \متن‌لاتین{VNF}ها که کارکردهای شبکه را پیاده‌سازی کرده‌اند، \متن‌لاتین{EMS} برای مدیریت \متن‌لاتین{VNF}ها و \متن‌لاتین{OSS/BSS} برای ارتباط با سیستم‌های مدیریت سنتی
+\فقره[\متن‌لاتین{MANO}]: که وظیفه مدیریت و هماهنگی سرویس ها و تخصیص منابع را برعهده دارد و از سه بخش
+\متن‌لاتین{NFVO}
+، \متن‌لاتین{VIM}
+و \متن‌لاتین{VNFM}
+تشکیل شده است.
+در ادامه به توصیف اجزای ذکر شده از اسناد ETSI می پردازیم[6]، [7]، [8] و [9].
+
+\زیرزیرقسمت{\متن‌لاتین{NVFI}}
+\پاراگراف{}
+مولفه \متن‌لاتین{NFVI} شامل تمام نرم‌افزارها، مانند \متن‌لاتین{Hypervisor}، و سخت‌افزارهایی است که با همکاری یکدیگر منابع زیرساخت برای استقرار \متن‌لاتین{VNF}ها را فراهم می‌کنند.
+سخت‌افزارهای موجود در زیرساخت \متن‌لاتین{NFV} به سه دسته منابع پردازشی، منابع ذخیره سازی و شبکه ارتباطی دسته بندی می شوند.
+\متن‌لاتین{Hypervisor} یک لایه نرم‌افزاری است که سخت‌افزارهای زیرساخت را مجازی کرده و انتزاعی از آن‍ها به دست می‌دهد.
+
+\پاراگراف{}
+این مولفه می‌تواند شامل کارکردهای شبکه به صورت کامل مجازی نشده نیز باشد.
+در این مولفه هر جایی که یک کارکرد شبکه به صورت یک \متن‌لاتین{VNF} می تواند استقرار یابد یک \متن‌لاتین{NFVI-PoP} نامیده می‌شود.
+به عنوان مثال یک سرور مجازی شده و یا یک مرکز داده مجازی شده را می توان به عنوان \متن‌لاتین{NFVI-PoP} در نظر گرفت.
+
+\زیرزیرقسمت{\متن‌لاتین{VNF}}
+
+\پاراگراف{}
+یک VNF پیاده سازی از یک کارکرد شبکه است که می تواند بر روی NFVI استقرار یابد. یک نمونه1 از VNF، نتیجه ایجاد نمونه در زمان اجرا از برنامه VNF و مولفه های آن با رعایت نیازمندی های توصیف شده لازم است. در حقیقت یک نمونه را می توان با استفاده از اجرای برنامه یا تصویر2VNF در یک ماشین مجازی3 و اختصاص منابع محاسباتی، پردازشی و شبکه به آن ایجاد کرد. هر VNF می تواند از یک یا چند مولفه (VNFC) تشکیل شود که هر یک از این مولفه ها خود می توانند در یک ماشین مجازی اجرا شوند. برای ایجاد نمونه از یک VNF، از همه VNFC های آن باید نمونه ایجاد شود. به عنوان یک مثال از VNF می توان کارکرد دیواره آتش مجازی شرکت CISCO به نام ASAv را نام برد که مشخصات آن در شکل 3 نمایش داده شده است. همانگونه که در این شکل مشاهده می شود، چهار قالب مختلف ASAv تعریف شده که هر کدام نیازمندی های منابع پردازشی، حافظه و ذخیره سازی متفاوتی دارند و متناسب با منابع اختصاص یافته به آن ها، توانایی پردازش ترافیک مشخصی را می توانند ارائه کنند که با عنوانThroughput  در شکل مشخص شده است. برای استقرار هر یک از این قالب ها باید یک ماشین مجازی مطابق با مشخصات نمایش داده شده در این شکل آماده شود و تصویر ASAv به آن داده شود. البته این روند برای ASAv به صورت خودکار و با استفاده از یک قالب استقرار که همراه با VNF دانلود می شود انجام می شود. هر یک از این قالب ها نیاز به مجوزهای متفاوت دارند و هزینه های استفاده از آن ها متفاوت است.
+
+\پاراگراف{}
+هر VNF توسط توصیف گر1 VNF(VNFD) توصیف می شود که شامل توصیف VNF و نیازمندی های لازم برای استقرار و همچنین رفتار VNF در زمان اجرا است. دو نوع مقیاس پذیری برای نمونه های یک VNF در زمان اجرا تعریف می شود. مقیاس پذیری افقی و عمودی. در اسناد ETSI این مقیاس پذیری ها برای VNFC ها به صورت زیر تعریف شده است:
+
+    • افزایش مقیاس افقی1:  نمونه های جدیدی از VNFC ها ایجاد می شود.
+    • افزایش مقیاس عمودی2: منابع پردازشی، ذخیره سازی و یا شبکه ای بیشتری به نمونه های ایجاد شده از VNFC ها داده می شود.
+    • کاهش مقیاس افقی3: نمونه های ایجاد شده از VNFC ها خاتمه می یابند.
+    • کاهش مقیاس عمودی4: منابع داده شده به نمونه های VNFC از آن ها گرفته می شود.
+
+\پاراگراف{}
+البته همانگونه که در تعریف ETSI، مقیاس پذیری برای VNFC ها تعریف شده، می توان آن را برای VNF نیز تعریف کرد. افزایش یا کاهش مقیاس افقی و عمودی می تواند به صورت خودکار بر اساس شرایط مشخص شده در VNFD انجام شود یا از طریق واسط های مدیریتی و بر اساس شرایط شبکه تصمیم گیری شود. همچنین چهار روش برای توزیع بار1 بین نمونه های مختلف یک VNF به شرح زیر بیان شده است:
+
 \end{document}
