feat: Update Problem Documentation

--- a/problem/main.tex
+++ b/problem/main.tex
@@ -218,7 +218,8 @@
 ، \متن‌لاتین{VIM}
 و \متن‌لاتین{VNFM}
 تشکیل شده است.
-در ادامه به توصیف اجزای ذکر شده از اسناد ETSI می پردازیم[6]، [7]، [8] و [9].
+\پایان{فقرات}
+در ادامه به توصیف اجزای ذکر شده از اسناد \متن‌لاتین{ETSI} می پردازیم[6]، [7]، [8] و [9].
 
 \زیرزیرقسمت{\متن‌لاتین{NVFI}}
 \پاراگراف{}
@@ -246,5 +247,22 @@
 
 \پاراگراف{}
 البته همانگونه که در تعریف ETSI، مقیاس پذیری برای VNFC ها تعریف شده، می توان آن را برای VNF نیز تعریف کرد. افزایش یا کاهش مقیاس افقی و عمودی می تواند به صورت خودکار بر اساس شرایط مشخص شده در VNFD انجام شود یا از طریق واسط های مدیریتی و بر اساس شرایط شبکه تصمیم گیری شود. همچنین چهار روش برای توزیع بار1 بین نمونه های مختلف یک VNF به شرح زیر بیان شده است:
+
+\شروع{فقرات}
+
+\فقره \متن‌لاتین{VNF-Internal Load balancer}\\
+در این حالت فرض می شود که یک VNFC داخل VNF وجود دارد که توزیع و جمع آوری ترافیک را انجام می دهد. در این حالت نمونه های تکثیر شده VNFC از VNF های دیگر قابل مشاهده نیستند. این حالت در شکل 4 نمایش داده شده است.
+
+\فقره \متن‌لاتین{VNF-External load balancer}\\
+در این حالت یک \متن‌لاتین{VNF} به عنوان توزیع کننده بار عمل می کند و ترافیک را بین نمونه های ایجاد شده از \متن‌لاتین{VNF} توزیع می‌کند.
+از دید \متن‌لاتین{VNF} های دیگر، کل مجموعه به صورت یک \متن‌لاتین{VNF} دیده می‌شود. این حالت در شکل شکل 5 نمایش داده شده است.
+
+\فقره \متن‌لاتین{End-to-End Load balancer}\\
+در این حالت نمونه‌های ساخته شده از \متن‌لاتین{VNF} به صورت \متن‌لاتین{VNF} های مجزا دیده می‌شوند.
+در این حالت \متن‌لاتین{Peer NF} خود قابلیت توزیع ترافیک بین نمونه‌های ایجاد شده را دارد. مثالی از این حالت در شکل 6 نمایش داده شده است.
+
+\فقره \متن‌لاتین{Infrastructure network load balancer}\\
+
+\پایان{فقرات}
 
 \end{document}
