feat: Update Problme Document

--- a/problem/main.tex
+++ b/problem/main.tex
@@ -235,7 +235,11 @@
 \زیرزیرقسمت{\متن‌لاتین{VNF}}
 
 \پاراگراف{}
-یک VNF پیاده سازی از یک کارکرد شبکه است که می تواند بر روی NFVI استقرار یابد. یک نمونه1 از VNF، نتیجه ایجاد نمونه در زمان اجرا از برنامه VNF و مولفه های آن با رعایت نیازمندی های توصیف شده لازم است. در حقیقت یک نمونه را می توان با استفاده از اجرای برنامه یا تصویر2VNF در یک ماشین مجازی3 و اختصاص منابع محاسباتی، پردازشی و شبکه به آن ایجاد کرد. هر VNF می تواند از یک یا چند مولفه (VNFC) تشکیل شود که هر یک از این مولفه ها خود می توانند در یک ماشین مجازی اجرا شوند. برای ایجاد نمونه از یک VNF، از همه VNFC های آن باید نمونه ایجاد شود. به عنوان یک مثال از VNF می توان کارکرد دیواره آتش مجازی شرکت CISCO به نام ASAv را نام برد که مشخصات آن در شکل 3 نمایش داده شده است. همانگونه که در این شکل مشاهده می شود، چهار قالب مختلف ASAv تعریف شده که هر کدام نیازمندی های منابع پردازشی، حافظه و ذخیره سازی متفاوتی دارند و متناسب با منابع اختصاص یافته به آن ها، توانایی پردازش ترافیک مشخصی را می توانند ارائه کنند که با عنوانThroughput  در شکل مشخص شده است. برای استقرار هر یک از این قالب ها باید یک ماشین مجازی مطابق با مشخصات نمایش داده شده در این شکل آماده شود و تصویر ASAv به آن داده شود. البته این روند برای ASAv به صورت خودکار و با استفاده از یک قالب استقرار که همراه با VNF دانلود می شود انجام می شود. هر یک از این قالب ها نیاز به مجوزهای متفاوت دارند و هزینه های استفاده از آن ها متفاوت است.
+یک \متن‌لاتین{VNF} پیاده‌سازی از یک کارکرد شبکه است که می‌تواند بر روی \متن‌لاتین{NFVI} استقرار یابد.
+یک نمونه\پانویس{instance} از \متن‌لاتین{VNF}، نتیجه ایجاد نمونه در زمان اجرا از برنامه \متن‌لاتین{VNF} و مولفه‌های آن با رعایت نیازمندی‌های توصیف شده لازم است.
+در حقیقت یک نمونه را می‌توان با استفاده از اجرای برنامه یا تصویر\پانویس{image} \متن‌لاتین{VNF} در یک ماشین مجازی و اختصاص منابع محاسباتی، پردازشی و شبکه به آن ایجاد کرد.
+هر \متن‌لاتین{VNF} می‌تواند از یک یا چند مولفه \متن‌لاتین{(VNFC)} تشکیل شود که هر یک از این مولفه‌ها خود می‌توانند در یک ماشین مجازی اجرا شوند.
+برای ایجاد نمونه از یک VNF، از همه VNFC های آن باید نمونه ایجاد شود. به عنوان یک مثال از VNF می توان کارکرد دیواره آتش مجازی شرکت CISCO به نام ASAv را نام برد که مشخصات آن در شکل 3 نمایش داده شده است. همانگونه که در این شکل مشاهده می شود، چهار قالب مختلف ASAv تعریف شده که هر کدام نیازمندی های منابع پردازشی، حافظه و ذخیره سازی متفاوتی دارند و متناسب با منابع اختصاص یافته به آن ها، توانایی پردازش ترافیک مشخصی را می توانند ارائه کنند که با عنوانThroughput  در شکل مشخص شده است. برای استقرار هر یک از این قالب ها باید یک ماشین مجازی مطابق با مشخصات نمایش داده شده در این شکل آماده شود و تصویر ASAv به آن داده شود. البته این روند برای ASAv به صورت خودکار و با استفاده از یک قالب استقرار که همراه با VNF دانلود می شود انجام می شود. هر یک از این قالب ها نیاز به مجوزهای متفاوت دارند و هزینه های استفاده از آن ها متفاوت است.
 
 \پاراگراف{}
 هر VNF توسط توصیف گر1 VNF(VNFD) توصیف می شود که شامل توصیف VNF و نیازمندی های لازم برای استقرار و همچنین رفتار VNF در زمان اجرا است. دو نوع مقیاس پذیری برای نمونه های یک VNF در زمان اجرا تعریف می شود. مقیاس پذیری افقی و عمودی. در اسناد ETSI این مقیاس پذیری ها برای VNFC ها به صورت زیر تعریف شده است:
@@ -246,12 +250,15 @@
     • کاهش مقیاس عمودی4: منابع داده شده به نمونه های VNFC از آن ها گرفته می شود.
 
 \پاراگراف{}
-البته همانگونه که در تعریف ETSI، مقیاس پذیری برای VNFC ها تعریف شده، می توان آن را برای VNF نیز تعریف کرد. افزایش یا کاهش مقیاس افقی و عمودی می تواند به صورت خودکار بر اساس شرایط مشخص شده در VNFD انجام شود یا از طریق واسط های مدیریتی و بر اساس شرایط شبکه تصمیم گیری شود. همچنین چهار روش برای توزیع بار1 بین نمونه های مختلف یک VNF به شرح زیر بیان شده است:
+البته همانگونه که در تعریف \متن‌لاتین{ETSI}، مقیاس پذیری برای \متن‌لاتین{VNFC}ها تعریف شده، می‌توان آن را برای \متن‌لاتین{VNF} نیز تعریف کرد.
+افزایش یا کاهش مقیاس افقی و عمودی می‌تواند به صورت خودکار بر اساس شرایط مشخص شده در \متن‌لاتین{VNFD} انجام شود یا از طریق واسط‌های مدیریتی و بر اساس شرایط شبکه تصمیم گیری شود.
+همچنین چهار روش برای توزیع بار\متن‌لاتین{Load Balancing} بین نمونه‌های مختلف یک \متن‌لاتین{VNF} به شرح زیر بیان شده است:
 
 \شروع{فقرات}
 
 \فقره \متن‌لاتین{VNF-Internal Load balancer}\\
-در این حالت فرض می شود که یک VNFC داخل VNF وجود دارد که توزیع و جمع آوری ترافیک را انجام می دهد. در این حالت نمونه های تکثیر شده VNFC از VNF های دیگر قابل مشاهده نیستند. این حالت در شکل 4 نمایش داده شده است.
+در این حالت فرض می‌شود که یک \متن‌لاتین{VNFC} داخل \متن‌لاتین{VNF} وجود دارد که توزیع و جمع آوری ترافیک را انجام می‌دهد.
+در این حالت نمونه‌های تکثیر شده \متن‌لاتین{VNFC} از \متن‌لاتین{VNF}های دیگر قابل مشاهده نیستند. این حالت در شکل 4 نمایش داده شده است.
 
 \فقره \متن‌لاتین{VNF-External load balancer}\\
 در این حالت یک \متن‌لاتین{VNF} به عنوان توزیع کننده بار عمل می کند و ترافیک را بین نمونه های ایجاد شده از \متن‌لاتین{VNF} توزیع می‌کند.
@@ -262,7 +269,17 @@
 در این حالت \متن‌لاتین{Peer NF} خود قابلیت توزیع ترافیک بین نمونه‌های ایجاد شده را دارد. مثالی از این حالت در شکل 6 نمایش داده شده است.
 
 \فقره \متن‌لاتین{Infrastructure network load balancer}\\
+در این حالت، نمونه‌های ایجاد شده از \متن‌لاتین{VNF}، به صورت یک \متن‌لاتین{VNF} واحد دیده می‌شوند
+و یک توزیع کننده بار در زیرساخت (به عنوان مثال در \متن‌لاتین{Hypervisor}) وظیفه توزیع و جمع آوری ترافیک از/به نمونه‌های ایجاد شده را برعهده دارد.
+مثالی از این حالت در شکل 7 نمایش داده شده است.
 
 \پایان{فقرات}
+
+\زیرزیرقسمت{\متن‌لاتین{EM}}
+
+\پاراگراف{}
+این مولفه کارکردهای \متن‌لاتین{FCAPS}\پانویس{Fault,Config,Accounting,Performance,Security management}
+را برای \متن‌لاتین{VNF} ها انجام می‌دهد که شامل مدیریت خطا، پیکربندی، امنیت، حسابداری و کارایی برای کارکردی است که \متن‌لاتین{VNF} ارائه می‌دهد.
+این مولفه ممکن است آگاه از مجازی‌سازی کارکرد باشد و با همکاری \متن‌لاتین{VNFM} عملکردهای خودش را انجام بدهد.
 
 \end{document}
