--- a/problem/main.tex
+++ b/problem/main.tex
@@ -239,7 +239,13 @@
 یک نمونه\پانویس{instance} از \متن‌لاتین{VNF}، نتیجه ایجاد نمونه در زمان اجرا از برنامه \متن‌لاتین{VNF} و مولفه‌های آن با رعایت نیازمندی‌های توصیف شده لازم است.
 در حقیقت یک نمونه را می‌توان با استفاده از اجرای برنامه یا تصویر\پانویس{image} \متن‌لاتین{VNF} در یک ماشین مجازی و اختصاص منابع محاسباتی، پردازشی و شبکه به آن ایجاد کرد.
 هر \متن‌لاتین{VNF} می‌تواند از یک یا چند مولفه \متن‌لاتین{(VNFC)} تشکیل شود که هر یک از این مولفه‌ها خود می‌توانند در یک ماشین مجازی اجرا شوند.
-برای ایجاد نمونه از یک VNF، از همه VNFC های آن باید نمونه ایجاد شود. به عنوان یک مثال از VNF می توان کارکرد دیواره آتش مجازی شرکت CISCO به نام ASAv را نام برد که مشخصات آن در شکل 3 نمایش داده شده است. همانگونه که در این شکل مشاهده می شود، چهار قالب مختلف ASAv تعریف شده که هر کدام نیازمندی های منابع پردازشی، حافظه و ذخیره سازی متفاوتی دارند و متناسب با منابع اختصاص یافته به آن ها، توانایی پردازش ترافیک مشخصی را می توانند ارائه کنند که با عنوانThroughput  در شکل مشخص شده است. برای استقرار هر یک از این قالب ها باید یک ماشین مجازی مطابق با مشخصات نمایش داده شده در این شکل آماده شود و تصویر ASAv به آن داده شود. البته این روند برای ASAv به صورت خودکار و با استفاده از یک قالب استقرار که همراه با VNF دانلود می شود انجام می شود. هر یک از این قالب ها نیاز به مجوزهای متفاوت دارند و هزینه های استفاده از آن ها متفاوت است.
+برای ایجاد نمونه از یک \متن‌{VNF}، از همه \متن‌لاتین{VNFC}های آن باید نمونه ایجاد شود.
+به عنوان یک مثال از \متن‌لاتین{VNF} می‌توان کارکرد دیواره آتش مجازی شرکت \متن‌لاتین{CISCO} به نام \متن‌لاتین{ASAv} را نام برد که مشخصات آن در شکل 3 نمایش داده شده است.
+همانگونه که در این شکل مشاهده می‌شود، چهار قالب مختلف \متن‌لاتین{ASAv} تعریف شده که هر کدام نیازمندی های منابع پردازشی، حافظه و ذخیره سازی متفاوتی دارند و متناسب با منابع اختصاص یافته به آن‌ها،
+توانایی پردازش ترافیک مشخصی را می‌توانند ارائه کنند که با عنوان \متن‌لاتین{Throughput} در شکل مشخص شده است. برای استقرار هر یک از این قالب‌ها باید یک ماشین مجازی مطابق با
+مشخصات نمایش داده شده در این شکل آماده شود و تصویر \متن‌لاتین{ASAv} به آن داده شود.
+البته این روند برای \متن‌لاتین{ASAv} به صورت خودکار و با استفاده از یک قالب استقرار که همراه با \متن‌لاتین{VNF} دانلود می‌شود انجام می‌شود.
+هر یک از این قالب‌ها نیاز به مجوزهای متفاوت دارند و هزینه‌های استفاده از آن‌ها متفاوت است.
 
 \پاراگراف{}
 هر VNF توسط توصیف گر1 VNF(VNFD) توصیف می شود که شامل توصیف VNF و نیازمندی های لازم برای استقرار و همچنین رفتار VNF در زمان اجرا است. دو نوع مقیاس پذیری برای نمونه های یک VNF در زمان اجرا تعریف می شود. مقیاس پذیری افقی و عمودی. در اسناد ETSI این مقیاس پذیری ها برای VNFC ها به صورت زیر تعریف شده است:
