feat: Update Problem Description.

--- a/problem/literature.tex
+++ b/problem/literature.tex
@@ -4,3 +4,32 @@
 در این بخش تحقیقات مرتبط با استقرار سرویس و تخصیص منابع در معماری‌های NFV و SFC را مورد بررسی قرار می‌دهیم.
 ابتدا ابعاد مختلف مسائل تحقیقاتی و به خصوص مسئله تخصیص منابع را مورد بررسی قرار می‌دهیم.
 سپس دسته بندی از تحقیقات انجام شده با توجه به درنظر گرفتن یا نگرفتن تفاهم‌نامه لایه سرویس در تخصیص منابع انجام داده و تحقیقات مرتبط با هر دسته را بررسی خواهیم کرد. در نهایت مهمترین تحقیقات انجام شده غیرمرتبط با مسئله تخصیص منابع را نیز بررسی خواهیم کرد.
+
+\قسمت{ابعاد مختلف مسائل تحقیقاتی}
+در این بخش با توجه به معماری‌های SFC و NFV ابعاد مختلف مسائل تحقیقاتی را مورد بررسی قرار می‌دهیم.
+از آنجایی که موضوع این رساله بر مسئله تخصیص منابع تمرکز دارد بر این بخش تمرکز بیشتری خواهیم داشت. در این تحقیق تخصیص منابع را به صورت اختصاص منابع شبکه، پردازشی، محاسباتی و ذخیره سازی به ماشین‌های
+مجازی اجراکننده کارکردها و اختصاص پهنای باند به لینک‌های مجازی بین کارکردها بر روی شبکه ارتباطی زیرساخت تعریف می‌کنیم.
+در این راستا باید مشخص شود که ماشین‌های مجازی اجرا کننده کارکردها که به عنوان نمونه ایجاد شده از کارکردها شناخته می‌شوند بر روی چه سرورهایی ایجاد شوند.
+این فرآیند را نگاشت کارکردها به نمونه‌ها می گوییم. همچنین باید مشخص شود چه میزان پهنای باند از چه لینک هایی به به لینک های مجازی اختصاص یابد.
+ممکن است پهنای باند یک لینک، بر روی چند لینک و یا چند مسیر در شبکه زیرساخت اختصاص پیدا کند. به این فرایند نیز نگاشت لینک‌های مجازی گفته می‌شود.
+با توجه به توضیحات گفته شده در ادامه ابعاد مختلف مسائل تحقیقاتی را شرح می دهیم.
+
+\زیرقسمت{دیدگاه تعریف مساله}
+معماری آینده اینترنت بر اساس مدل تجاری IaaS1 است که نقش ISP ها به دو نفش فراهم کننده سرویس2 (SP) و فراهم کننده زیرساخت3(IP)، تبدیل می شود[21]. فراهم کننده سرویس مسئول ارائه سرویس انتها به انتها به کاربران بر روی زیرساختی است که از سمت IP ارائه می شود و مسئولیت مدیریت منابع آن را برعهده دارد. بر اساس این دو نقش، مسائل را از دو جنبه می توان دسته بندی کرد:
+    • مسائلی که در آن صرفا بحث سرویس گرفتن از یک یا چند IP مطرح است. از آنجایی که سرویس گیرنده خود تخصیص منابع را انجام نمی دهد، تمرکز این گونه مسئله ها بر روی مسائل قیمت گذاری در یک بازار NFV خواهد بود.
+    • مسائلی که در آن ها تخصیص بهینه منابع به سرویس نیز مورد توجه است. در این حالت IP از یک مرکز داده متمرکز یا چندین مرکز داده توزیع شده برای ارائه سرویس به کاربران استفاده می کند.  در این بخش وابسته به سطح  انتزاع مسئله، NFVI-PoP را می توان یک سرور یا یک مرکز داده در نظر گرفت. طبیعتا وابسته به سطح انتزاع، همبندی های مختلف شبکه ارتباطی را نیز می توان در نظر گرفت.
+در هر یک از این دیدگاه ها می توان فرضیاتی را در نظر گرفت که منجر به مسائل متفاوتی می شود. به عنوان مثال در دسته اول نحوه قیمت گذاری، همکاری و یا عدم همکاری IP ها و کاربران را می توان مورد مطالعه قرار داد. در مسائل تخصیص منابع هم اگر یک مرکز داده وجود داشته باشد، درباره شبکه زیرساخت می توان انواع همبندی های Switch centeric و یا Server centric را در نظر گرفت[22] که تاثیر زیادی بر تعریف مسائل دارند. زمانی که چندین مرکز داده توزیع شده از نظر جغرافیایی وجود داشته باشد، مسائل مهمی از جمله نحوه کاهش ترافیک بین مراکز داده مطرح می شود. همانگونه که بیان شد تمرکز این تحقیق بر دسته دوم مسائل یعنی تخصیص بهینه منابع به سرویس است.
+
+
+\زیرقسمت{انواع مسائل تحقیقاقی}
+
+همانگونه که پیشتر در بحث مسائل تحقیقاتی در معماری های SFC و NFV اشاره شد به طول کلی سه مسئله اصلی در این معماری ها وجود دارد که ترکیب های مختلف این مسائل با یکدیگر نیز می تواند به عنوان مسائل جدید مطرح گردد:
+
+    • ساخت زنجیره کارکرد در معماری SFC یا گراف VNF-FG در معماری NFV
+    • استقرار سرویس و تخصیص منابع بر اساس زنجیره SFC یا گراف VNF-FG
+    • زمان بندی در استفاده از منابع تخصیص یافته به سرویس
+
+
+
+\قسمت{باید مشخص شود!}
+مساله کیفیت سرویس در جایگذاری یا مهاجرت سرویس‌ها در محل‌هایی با منابع مشترک مانند مراکز داده‌ای بسیار حائر اهمیت است.
