feat: Update Related Works.

--- a/problem/literature.tex
+++ b/problem/literature.tex
@@ -1,11 +1,15 @@
 \فصل{مرور ادبیات}
 
 \قسمت{مقدمه}
+
+\پاراگراف{}
 در این بخش تحقیقات مرتبط با استقرار سرویس و تخصیص منابع در معماری‌های NFV و SFC را مورد بررسی قرار می‌دهیم.
 ابتدا ابعاد مختلف مسائل تحقیقاتی و به خصوص مسئله تخصیص منابع را مورد بررسی قرار می‌دهیم.
 سپس دسته بندی از تحقیقات انجام شده با توجه به درنظر گرفتن یا نگرفتن تفاهم‌نامه لایه سرویس در تخصیص منابع انجام داده و تحقیقات مرتبط با هر دسته را بررسی خواهیم کرد. در نهایت مهمترین تحقیقات انجام شده غیرمرتبط با مسئله تخصیص منابع را نیز بررسی خواهیم کرد.
 
 \قسمت{ابعاد مختلف مسائل تحقیقاتی}
+
+\پاراگراف{}
 در این بخش با توجه به معماری‌های SFC و NFV ابعاد مختلف مسائل تحقیقاتی را مورد بررسی قرار می‌دهیم.
 از آنجایی که موضوع این رساله بر مسئله تخصیص منابع تمرکز دارد بر این بخش تمرکز بیشتری خواهیم داشت. در این تحقیق تخصیص منابع را به صورت اختصاص منابع شبکه، پردازشی، محاسباتی و ذخیره سازی به ماشین‌های
 مجازی اجراکننده کارکردها و اختصاص پهنای باند به لینک‌های مجازی بین کارکردها بر روی شبکه ارتباطی زیرساخت تعریف می‌کنیم.
@@ -15,21 +19,46 @@
 با توجه به توضیحات گفته شده در ادامه ابعاد مختلف مسائل تحقیقاتی را شرح می دهیم.
 
 \زیرقسمت{دیدگاه تعریف مساله}
+
+\پاراگراف{}
 معماری آینده اینترنت بر اساس مدل تجاری IaaS1 است که نقش ISP ها به دو نفش فراهم کننده سرویس2 (SP) و فراهم کننده زیرساخت3(IP)، تبدیل می شود[21]. فراهم کننده سرویس مسئول ارائه سرویس انتها به انتها به کاربران بر روی زیرساختی است که از سمت IP ارائه می شود و مسئولیت مدیریت منابع آن را برعهده دارد. بر اساس این دو نقش، مسائل را از دو جنبه می توان دسته بندی کرد:
-    • مسائلی که در آن صرفا بحث سرویس گرفتن از یک یا چند IP مطرح است. از آنجایی که سرویس گیرنده خود تخصیص منابع را انجام نمی دهد، تمرکز این گونه مسئله ها بر روی مسائل قیمت گذاری در یک بازار NFV خواهد بود.
-    • مسائلی که در آن ها تخصیص بهینه منابع به سرویس نیز مورد توجه است. در این حالت IP از یک مرکز داده متمرکز یا چندین مرکز داده توزیع شده برای ارائه سرویس به کاربران استفاده می کند.  در این بخش وابسته به سطح  انتزاع مسئله، NFVI-PoP را می توان یک سرور یا یک مرکز داده در نظر گرفت. طبیعتا وابسته به سطح انتزاع، همبندی های مختلف شبکه ارتباطی را نیز می توان در نظر گرفت.
+\شروع{فقرات}
+\فقره مسائلی که در آن صرفا بحث سرویس گرفتن از یک یا چند IP مطرح است. از آنجایی که سرویس گیرنده خود تخصیص منابع را انجام نمی دهد، تمرکز این گونه مسئله ها بر روی مسائل قیمت گذاری در یک بازار NFV خواهد بود.
+\فقره مسائلی که در آن ها تخصیص بهینه منابع به سرویس نیز مورد توجه است. در این حالت IP از یک مرکز داده متمرکز یا چندین مرکز داده توزیع شده برای ارائه سرویس به کاربران استفاده می کند.  در این بخش وابسته به سطح  انتزاع مسئله، NFVI-PoP را می توان یک سرور یا یک مرکز داده در نظر گرفت. طبیعتا وابسته به سطح انتزاع، همبندی های مختلف شبکه ارتباطی را نیز می توان در نظر گرفت.
+\پایان{فقرات}
 در هر یک از این دیدگاه ها می توان فرضیاتی را در نظر گرفت که منجر به مسائل متفاوتی می شود. به عنوان مثال در دسته اول نحوه قیمت گذاری، همکاری و یا عدم همکاری IP ها و کاربران را می توان مورد مطالعه قرار داد. در مسائل تخصیص منابع هم اگر یک مرکز داده وجود داشته باشد، درباره شبکه زیرساخت می توان انواع همبندی های Switch centeric و یا Server centric را در نظر گرفت[22] که تاثیر زیادی بر تعریف مسائل دارند. زمانی که چندین مرکز داده توزیع شده از نظر جغرافیایی وجود داشته باشد، مسائل مهمی از جمله نحوه کاهش ترافیک بین مراکز داده مطرح می شود. همانگونه که بیان شد تمرکز این تحقیق بر دسته دوم مسائل یعنی تخصیص بهینه منابع به سرویس است.
 
 
 \زیرقسمت{انواع مسائل تحقیقاقی}
 
+\پاراگراف{}
 همانگونه که پیشتر در بحث مسائل تحقیقاتی در معماری های SFC و NFV اشاره شد به طول کلی سه مسئله اصلی در این معماری ها وجود دارد که ترکیب های مختلف این مسائل با یکدیگر نیز می تواند به عنوان مسائل جدید مطرح گردد:
 
-    • ساخت زنجیره کارکرد در معماری SFC یا گراف VNF-FG در معماری NFV
-    • استقرار سرویس و تخصیص منابع بر اساس زنجیره SFC یا گراف VNF-FG
-    • زمان بندی در استفاده از منابع تخصیص یافته به سرویس
+\شروع{فقرات}
+\فقره ساخت زنجیره کارکرد در معماری SFC یا گراف VNF-FG در معماری NFV
+\فقره استقرار سرویس و تخصیص منابع بر اساس زنجیره SFC یا گراف VNF-FG
+\فقره زمان‌بندی در استفاده از منابع تخصیص یافته به سرویس
+\پایان{فقرات}
 
+\پاراگراف{}
+مسائلی که بر ساخت زنجیره کارکرد در معماری SFC تمرکز دارند، فرض می‌کنند که کاربر ترتیب صریح زنجیره را ذکر نکرده است و صرفا ترتیب جزئی عبور ترافیک از کارکردها بیان شده است.
+به عنوان مثال کاربر بیان می‌کند که زنجیره‌اش شامل سه کارکرد دیواره آتش، NAT و Load Balancer است. ولی ترتیب دقیق آن ها را بیان نکرده و صرفا بیان میکند که Load balancer اخرین کارکرد در زنجیره است.
+در این حالت ممکن است NAT قبل یا بعد از دیواره آتش قرار گیرد که وابسته به شرایط شبکه ممکن است حتی در نمونه های ایجاد شده از کارکردها نیز تاثیر گذار باشد.
+مشابه این شرایط در ایجاد گراف VNF-FG نیز مطرح می‌شود. از آنجایی که زنجیره‌های متفاوت نحوه استقرار متفاوتی دارند، می توان این مسئله را با استقرار سرویس ترکیب کرد.
 
+\پاراگرف{}
+سرویسی که ارتباط کارکردهای آن توسط SFC یا VNF-FG توصیف می‌شود باید در زیرساخت استقرار یابد.
+در استقرار سرویس ابتدا باید مشخص شود چه تعداد نمونه از کارکردها بر روی چه سرورهایی باید ایجاد شود و چه میزان پهنای باند از چه لینک‌هایی باید به لینک‌های مجازی اختصاص یابد.
+پس از مشخص شدن این موارد منابع به نمونه‌ها و لینک‌های مجازی اختصاص می‌یابد.
+
+\پاراگراف{}
+در روند استقرار سرویس، نیازمندی‌هایی مانند نیازمندی‌های کیفیت سرویس اعلام شده نیز باید در نظر گرفته شود.
+ممکن است فرض شود که بعضی از منابع، مانند ذخیره‌سازی و یا پهنای‌باند، نامحدود یا از پیش تعیین شده هستند و در روند استقرار سرویس دخالت داده نشوند.
+همچنین نمونه‌ها ممکن است ایجاد شوند یا از قبل وجود داشته باشند و صرفا کارکردهای زنجیره به آن ها انتساب پیدا کنند.
+انتساب چندین کارکرد یکسان به یک نمونه در حالتی رخ می‌دهد که نمونه ها بتوانند بین کارکردهای زنجیره های مختلف به اشتراک گذاشته شوند و ترافیک زنجیره های مختلف را پردازش کنند.
+به عنوان مثال ممکن است فرض کنید دو نمونه برای یک کارکرد دیواره آتش در یک زنجیره ایجاد شده است. زنجیره کارکرد دیگری نیز دارای کارکرد دیواره آتش است و باید برای آن چهار نمونه ایجاد شود.
+در این حالت می توان برای آن کارکرد دو نمونه اختصاصی ایجاد کرد و به دو نمونه ایجاد شده فعلی نیز آن را انتساب داد.
+در این حالت، آن کارکرد به چهار نمونه انتساب پیدا کرده است و پردازش ترافیک آن توسط چهار نمونه انجام می‌شود.
 
 \قسمت{باید مشخص شود!}
 مساله کیفیت سرویس در جایگذاری یا مهاجرت سرویس‌ها در محل‌هایی با منابع مشترک مانند مراکز داده‌ای بسیار حائر اهمیت است.
