--- a/problem/literature.tex
+++ b/problem/literature.tex
@@ -60,5 +60,8 @@
 در این حالت می توان برای آن کارکرد دو نمونه اختصاصی ایجاد کرد و به دو نمونه ایجاد شده فعلی نیز آن را انتساب داد.
 در این حالت، آن کارکرد به چهار نمونه انتساب پیدا کرده است و پردازش ترافیک آن توسط چهار نمونه انجام می‌شود.
 
+\پاراگراف{}
+در صورتی که در تعداد نمونه هایی که می توان برای کارکردها ایجاد کرد محدودیتی وجود داشته باشد، ناچار به زمان بندی در استفاده از آن ها خواهیم بود. در این صورت با درنظر گرفتن ماشین مجازی به عنوان یک منبع، می توان زمان بندی در استفاده آن را تعریف کرد. به صورت دقیق تر با اشتراک ماشین های مجازی بین چندین کارکرد متفاوت در طول زمان، می توان سرویس مورد نظر کاربر را برآورده کرد. این کار به این صورت انجام می شود که کارکردهای متفاوت به یک ماشین مجازی انتساب پیدا می کنند و ماشین مجازی در هر زمان صرفا تصویر یکی از کارکردها را اجرا می کند. بنابراین سایر کارکرد ها باید منتظر بمانند تا اجرای کارکرد فعلی خاتمه یافته، تصویر کارکرد آن ها با کارکرد فعلی تعویض شده و کارکرد آن ها اجرا شود تا بتوانند سرویس خود را دریافت کنند. تفاوت این حالت با اشتراک نمونه در این است که کارکردهایی که به ماشین مجازی انتساب پیدا کرده اند با یکدیگر متفاوت هستند و ماشین مجازی در هر زمان صرفا یک کارکرد را می تواند اجرا کند. اگر در طول زمان انتساب کارکردها به ماشین مجازی نیز تغییر کند، این مسئله با مسئله تخصیص منابع ترکیب می شود. در این رساله ما صرفا بر استقرار سرویس و تخصیص منابع تمرکز خواهیم کرد.
+
 \قسمت{باید مشخص شود!}
 مساله کیفیت سرویس در جایگذاری یا مهاجرت سرویس‌ها در محل‌هایی با منابع مشترک مانند مراکز داده‌ای بسیار حائر اهمیت است.
