--- a/problem/literature.tex
+++ b/problem/literature.tex
@@ -3,7 +3,7 @@
 \قسمت{مقدمه}
 
 \پاراگراف{}
-در این بخش تحقیقات مرتبط با استقرار سرویس و تخصیص منابع در معماری‌های NFV و SFC را مورد بررسی قرار می‌دهیم.
+در این بخش تحقیقات مرتبط با استقرار سرویس و تخصیص منابع در معماری‌های\متن‌لاتین{NFV} و \متن‌لاتین{SFC} را مورد بررسی قرار می‌دهیم.
 ابتدا ابعاد مختلف مسائل تحقیقاتی و به خصوص مساله تخصیص منابع را مورد بررسی قرار می‌دهیم.
 سپس دسته بندی از تحقیقات انجام شده با توجه به درنظر گرفتن یا نگرفتن تفاهم‌نامه لایه سرویس در تخصیص منابع انجام داده و تحقیقات مرتبط با هر دسته را بررسی خواهیم کرد. در نهایت مهمترین تحقیقات انجام شده غیرمرتبط با مسئله تخصیص منابع را نیز بررسی خواهیم کرد.
 
@@ -61,7 +61,7 @@
 در این حالت، آن کارکرد به چهار نمونه انتساب پیدا کرده است و پردازش ترافیک آن توسط چهار نمونه انجام می‌شود.
 
 \پاراگراف{}
-در صورتی که در تعداد نمونه هایی که می توان برای کارکردها ایجاد کرد محدودیتی وجود داشته باشد، ناچار به زمان بندی در استفاده از آن ها خواهیم بود.
+در صورتی که در تعداد نمونه‌هایی که می‌توان برای کارکردها ایجاد کرد محدودیتی وجود داشته باشد، ناچار به زمان بندی در استفاده از آن ها خواهیم بود.
 در این صورت با درنظر گرفتن ماشین مجازی به عنوان یک منبع، می‌توان زمان‌بندی در استفاده آن را تعریف کرد.
 به صورت دقیق تر با اشتراک ماشین‌های مجازی بین چندین کارکرد متفاوت در طول زمان، میتوان سرویس مورد نظر کاربر را برآورده کرد.
 این کار به این صورت انجام می‌شود که کارکردهای متفاوت به یک ماشین مجازی انتساب پیدا می کنند و ماشین مجازی در هر زمان صرفا تصویر یکی از کارکردها را اجرا می‌کند.
