feat Update Related Works

--- a/problem/literature.tex
+++ b/problem/literature.tex
@@ -46,7 +46,7 @@
 در این حالت ممکن است NAT قبل یا بعد از دیواره آتش قرار گیرد که وابسته به شرایط شبکه ممکن است حتی در نمونه های ایجاد شده از کارکردها نیز تاثیر گذار باشد.
 مشابه این شرایط در ایجاد گراف VNF-FG نیز مطرح می‌شود. از آنجایی که زنجیره‌های متفاوت نحوه استقرار متفاوتی دارند، می توان این مسئله را با استقرار سرویس ترکیب کرد.
 
-\پاراگرف{}
+\پاراگراف{}
 سرویسی که ارتباط کارکردهای آن توسط SFC یا VNF-FG توصیف می‌شود باید در زیرساخت استقرار یابد.
 در استقرار سرویس ابتدا باید مشخص شود چه تعداد نمونه از کارکردها بر روی چه سرورهایی باید ایجاد شود و چه میزان پهنای باند از چه لینک‌هایی باید به لینک‌های مجازی اختصاص یابد.
 پس از مشخص شدن این موارد منابع به نمونه‌ها و لینک‌های مجازی اختصاص می‌یابد.
@@ -71,4 +71,19 @@
 در این رساله ما صرفا بر استقرار سرویس و تخصیص منابع تمرکز خواهیم کرد و در آن بحث اشتراک نمونه را نیز مدنظر قرار خواهیم داد.
 
 \قسمت{باید مشخص شود!}
+
+\پاراگراف{}
 مساله کیفیت سرویس در جایگذاری یا مهاجرت سرویس‌ها در محل‌هایی با منابع مشترک مانند مراکز داده‌ای بسیار حائر اهمیت است.
+
+\قسمت{مسائل حوزه هوش مصنوعی}
+
+\پاراگراف{}
+سال‌ها است که از تکنیک‌های هوش مصنوعی برای انجام عملیات‌های شبکه‌های آینده از مدیریت تا نگهداری و مراقب استفاده می‌شود. از تکنیک‌های یادگیری عمیق
+برای مسائلی از جمله جنبه‌های مختلف کنترل ترافیک مانند دسته‌بندی ترافیک شبکه، پیش‌بینی جریان شبکه، پیش‌بینی جابجایی
+و شبکه‌های خود سامان‌دهنده\پانویس{Self-Organized Networks} و شبکه‌های رادیویی شناختی\پانویس{Cognitive Radio Network}
+استفاده می‌گردد. \مرجع{Benzaid2020}
+
+\پاراگراف{}
+با استفاده از تکنیک‌های هوش مصنوعی می‌توان ترافیک ورودی را پیش‌بینی کرده از آن جهت پذیرش سرویس‌ها با رعایت تفاهم‌نامه لایه سرویس استفاده کرد. \مرجع{Benzaid2020}
+در \مرجع{} محققان با استفاده از یادگیری ماشین و ترکیب آن با \متن‌لاتین{SDN} و \متن‌لاتین{NFV} ترافیک را پیش‌بینی کرده و بر اساس معیارهایی از جمله بار ترافیک
+توپولوژی شبکه و تخصیص منابع را به صورت خودکار برای سرویس‌دهی به تقاضای جدید تغییر می‌دهند.
