--- a/problem/main.tex
+++ b/problem/main.tex
@@ -11,4 +11,8 @@
 \include{literature}
 \include{problem}
 
+\setLTRbibitems{}
+\bibliographystyle{ieeetr}
+\bibliography{references.bib}
+
 \end{document}
