--- a/problem/references.bib
+++ b/problem/references.bib
@@ -11,3 +11,17 @@
   title = {{AI}-Driven Zero Touch Network and Service Management in 5G and Beyond: Challenges and Research Directions},
   journal = {{IEEE} Network}
 }
+
+@article{Martin2018,
+  doi = {10.1109/tbc.2018.2828608},
+  url = {https://doi.org/10.1109/tbc.2018.2828608},
+  year = {2018},
+  month = jun,
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume = {64},
+  number = {2},
+  pages = {561--574},
+  author = {Angel Martin and Jon Egana and Julian Florez and Jon Montalban and Igor G. Olaizola and Marco Quartulli and Roberto Viola and Mikel Zorrilla},
+  title = {Network Resource Allocation System for {QoE}-Aware Delivery of Media Services in 5G Networks},
+  journal = {{IEEE} Transactions on Broadcasting}
+}
