feat: Review on More Papers

--- a/problem/introduction.tex
+++ b/problem/introduction.tex
@@ -80,7 +80,9 @@
 \شروع{فقرات}
 \فقره امکان به اشتراک‌گذاری کارکردها میان چندین زنجیره و در نظر گرفتن پارامتر‌های کیفیت سرویس برای تحقق تفاهم‌نامه لایه سرویس: در جهت مصرف بهینه منابع ممکن است یک
 کارکرد میان چندین زنجیره به اشتراک گذاشته شود که نیاز به در نظر گرفتن پارامترهای کیفیت سرویس را دارد چرا که می‌تواند آن‌ها را به مخاطره بیاندازد.
-\فقره استفاده از چهارچوب یادگیری تقویتی عمیق بر پایه شبکه‌های عصبی گرافی که می‌تواند کارآیی عامل نسبت به شبکه‌های جدید را افزایش دهد.
+\فقره استفاده از چهارچوب یادگیری تقویتی عمیق بر پایه شبکه‌های عصبی گرافی که می‌تواند کارآیی عامل نسبت به شبکه‌های جدید را افزایش دهد. در تحقیقاتی که به اینجا صورت گرفته است
+از الگوریتم‌های یادگیری گرافی استفاده نشده است که در نتیجه آن ویژگی‌های گراف در یادگیری تاثیر نداشته است، در این رساله قصدا داریم با استفاده از الگوریتم‌های یادگیری گرافی
+تاثیر ویژگی‌ها گراف شبکه را پررنگ‌تر کنیم.
 \فقره در نظر گرفتن بحث‌های نظارتی در مجازی‌سازی کارکرد شبکه برای جلوگیری از خطا به صورت بلادرنگ: خطاهای بسیار در شبکه‌ها رخ می‌دهند که نیاز دارند به آن‌ها رسیدگی شود و
 در صورت نیاز حتی از آن‌ها پشیگیری شود. در این رساله این بحث به صورت بلادرنگ در نظر گرفته می‌شود و از سوی دیگر با پیش‌بینی پارامترها از خطاها پیش‌گیری نیز خواهد شد.
 \پایان{فقرات}
