--- a/problem/references.bib
+++ b/problem/references.bib
@@ -25,3 +25,14 @@
   title = {Network Resource Allocation System for {QoE}-Aware Delivery of Media Services in 5G Networks},
   journal = {{IEEE} Transactions on Broadcasting}
 }
+
+@inproceedings{Arteaga2017,
+  doi = {10.23919/cnsm.2017.8255982},
+  url = {https://doi.org/10.23919/cnsm.2017.8255982},
+  year = {2017},
+  month = nov,
+  publisher = {{IEEE}},
+  author = {Carlos Hernan Tobar Arteaga and Fulvio Risso and Oscar Mauricio Caicedo Rendon},
+  title = {An adaptive scaling mechanism for managing performance variations in network functions virtualization: A case study in an {NFV}-based {EPC}},
+  booktitle = {2017 13th International Conference on Network and Service Management ({CNSM})}
+}
