--- a/problem/literature.tex
+++ b/problem/literature.tex
@@ -85,5 +85,11 @@
 
 \پاراگراف{}
 با استفاده از تکنیک‌های هوش مصنوعی می‌توان ترافیک ورودی را پیش‌بینی کرده از آن جهت پذیرش سرویس‌ها با رعایت تفاهم‌نامه لایه سرویس استفاده کرد. \مرجع{Benzaid2020}
-در \مرجع{Martin2018} محققان با استفاده از یادگیری ماشین و ترکیب آن با \متن‌لاتین{SDN} و \متن‌لاتین{NFV} ترافیک را پیش‌بینی کرده و بر اساس معیارهایی از جمله بار ترافیک
-توپولوژی شبکه و تخصیص منابع را به صورت خودکار برای سرویس‌دهی به تقاضای جدید تغییر می‌دهند.
+در \مرجع{Martin2018} محققان با استفاده از یادگیری ماشین و ترکیب آن با \متن‌لاتین{SDN} و \متن‌لاتین{NFV} ترافیک را پیش‌بینی کرده و بر اساس معیارهایی از جمله بار ترافیک،
+توپولوژی شبکه و تخصیص منابع را به صورت خودکار برای سرویس‌دهی به تقاضای جدید تغییر می‌دهند. سیستم پیشنهادی \مرجع{Martin2018} از سه قسمت تشکیل شده است، قسمت اول
+نقض تفاهم‌نامه لایه سرویس را با یک الگوریتم دسته‌بندی پیش‌بینی می‌کند، قسمت دوم با استفاده از رگراسیون شاخص‌های ترافیکی را پیش‌بینی می‌کند و در نهایت قسمت سوم با استفاده از
+داده‌های دو قسمت اول یک مساله بهینه‌سازی را حل می‌کند.
+
+\پاراگراف{}
+در \مرجع{Arteaga2018} محققان از یادیگری تقویتی جهت مقیاس‌پذیری و تصمیمات بهتر برای مدیریت تغییرات کارایی استفاده می‌کنند. برای آموزش عامل آن‌ها از \متن‌لاتین{Q Learning}
+استفاده می‌کنند.
