feat: Update Problem Description.

--- a/problem/concepts.tex
+++ b/problem/concepts.tex
@@ -472,11 +472,11 @@ VNF-FG
 \پاراگراف{}
 همانگونه که مشاهده می شود، معماری های SFC و NFV مکمل یکدیگر هستند. یک گراف سرویس به راحتی می تواند توسط معماری SFC به صورت پویا ساخته شود که ترافیک آن به راحتی توسط سرآیند NSH مسیریابی می شود. جداسازی کارکردها از سخت افزار نیست توسط معماری NFV فراهم می شود. به همین دلیل بسیاری از تحقیقات انجام شده که در فصل بعد بررسی خواهد شد، از این ترکیب استفاده کرده اند و ورودی مسئله خود را یک گراف SFC که گره های آن VNF هستند در نظر گرفته اند. در حقیقت از آنجایی که گراف SFC می تواند توسط گراف VNF-FG نیز بیان شود معماری در نظر گرفته شده برای توصیف مسائل بیان شده در این رساله نیز معماری NFV خواهد بود.
 
-\قسمت{هوش تجربی شبکه\متن‌لاتین{Experimental Network Intelligence}}
+\قسمت{هوش تجربی شبکه}
 
 \پاراگراف{}
-کارگروه \متن‌لاتین{ETSI ENI} در حال طراحی یک معماری مدیریت شبکه شناختی\متن‌لاتین{Cognitive Network Management}
-بر پایه حلقه بسته\متن‌لاتین{closed-loop} مکانیزم‌های هوش‌مصنوعی بر اساس سیاست‌های آگاه به متن\متن‌لاتین{Context-aware} و آگاه از داده‌ها
+کارگروه \متن‌لاتین{ETSI ENI} در حال طراحی یک معماری مدیریت شبکه شناختی\پانویس{Cognitive Network Management}
+بر پایه حلقه بسته\پانویس{closed-loop} مکانیزم‌های هوش‌مصنوعی بر اساس سیاست‌های آگاه به متن\پانویس{Context-aware} و آگاه از داده‌ها
 برای بهبود تجربه اپراتورهای شبکه می‌باشند.
 
 \قسمت{نتیجه‌گیری}
