--- a/problem/literature.tex
+++ b/problem/literature.tex
@@ -94,3 +94,7 @@
 در \مرجع{Arteaga2018} محققان از یادیگری تقویتی جهت مقیاس‌پذیری و تصمیمات بهتر برای مدیریت تغییرات کارایی استفاده می‌کنند. برای آموزش عامل آن‌ها از \متن‌لاتین{Q Learning}
 استفاده می‌کنند. استفاده از الگوریتم‌های یادگیری ماشین به پروژه‌های تحقیقاتی محدود نبوده و پروژه \متن‌لاتین{5G-PPP} قصد دارد یک چهارچوب مدیریت هوشمند برای شبکه‌های نسل پنجم
 طراحی کند. در کنار همه مراکز استانداردسازی نیست دست به تعریف استاندارد برای مدیریت خودکار شبکه‌ها زده‌اند که از جمله آن‌ها می‌توان به \متن‌لاتین{ENI} و \متن‌لاتین{ZSM} اشاره کرد.
+
+\پاراگراف{}
+مساله پیش‌بینی ترافیک در بیشتر مسائل شبکه‌ای مطرح است و برای آن راه‌حل‌های زیادی ارائه شده است که از جمله آن می‌توان به روش‌هایی بر پایه شبکه‌های عصبی،
+شبکه‌های بازگشتی حفاظه کوتاه مدت بلند\پانویس{Long Short-Term Memory Recurrent Network} و \نقاط‌خ
