feat: Improve The Concepts Section

--- a/problem/concepts.tex
+++ b/problem/concepts.tex
@@ -470,14 +470,22 @@ VNF-FG
 مفهوم زنجیره کارکرد ابتدا توسط ETSI با استفاده از گراف NF-FG ارائه شد. در حقیقت زنجیره کارکرد شکل ساده شده ای از NF-FG است و می تواند توسط لینک های نقطه به نقطه(E-Line) که کارکرد ها را به یکدیگر متصل می کنند، در معماری NFV پیاده سازی شود. در هر صورت برای ایجاد سرویس های با ساختار پیچیده تر باید از توصیف NF-FG استفاده کرد[15]. در معماری NFV، گراف NF-FG یا VNF-FG هر هم بندی دلخواهی می تواند داشته باشد و هر ترتیب دلخواه ملاقاتی را با استفاده از NFP می توان بر روی آن ایجاد کرد. این در حالی است که زنجیره کارکرد اجازه ایجاد گره های منشعب کننده را نمی دهد و گره های منشعب کننده در حقیقت یک زنجیره کارکرد جدید را ایجاد می کنند. در نهایت اگرچه معماری SFC، سطح تعریف SFP را به صورت دقیق مشخص نکرده است ولی می توان SFP را مشابه NFP داخل VNF-FGR در نظر گرفت. از آنجایی که SFP به نمونه های کارکردها اشاره می کند، NFP داخل VNF-FGR نیز به نمونه های ایجاد شده از VNF ها اشاره می کند. البته باید توجه داشت که در VNF-FG چندین NFP می تواند وجود داشته باشد. بهترین حالت برای تشابه این است که SFC را معادل یک گراف VNF-FG با لینک های نقطه به نقطه در نظر گرفت که یک NFP که عینا بر گراف VNF-FG منطبق باشد برای آن تعریف شده باشد.
 
 \پاراگراف{}
-همانگونه که مشاهده می شود، معماری های SFC و NFV مکمل یکدیگر هستند. یک گراف سرویس به راحتی می تواند توسط معماری SFC به صورت پویا ساخته شود که ترافیک آن به راحتی توسط سرآیند NSH مسیریابی می شود. جداسازی کارکردها از سخت افزار نیست توسط معماری NFV فراهم می شود. به همین دلیل بسیاری از تحقیقات انجام شده که در فصل بعد بررسی خواهد شد، از این ترکیب استفاده کرده اند و ورودی مسئله خود را یک گراف SFC که گره های آن VNF هستند در نظر گرفته اند. در حقیقت از آنجایی که گراف SFC می تواند توسط گراف VNF-FG نیز بیان شود معماری در نظر گرفته شده برای توصیف مسائل بیان شده در این رساله نیز معماری NFV خواهد بود.
+همانگونه که مشاهده می‌شود، معماری‌های \متن‌لاتین{SFC}
+و \متن‌لاتین{NFV} مکمل یکدیگر هستند.
+یک گراف سرویس به راحتی می‌تواند توسط معماری \متن‌لاتین{SFC} به صورت پویا ساخته شود
+که ترافیک آن به راحتی توسط سرآیند \متن‌لاتین{NSH} مسیریابی می‌شود.
+جداسازی کارکردها از سخت افزار نیز توسط معماری \متن‌لاتین{NFV} فراهم می‌شود.
+به همین دلیل بسیاری از تحقیقات انجام شده که در فصل بعد بررسی خواهد شد، از این ترکیب استفاده کرده اند و ورودی مسئله خود را یک گراف SFC که گره های آن VNF هستند در نظر گرفته اند. در حقیقت از آنجایی که گراف SFC می تواند توسط گراف VNF-FG نیز بیان شود معماری در نظر گرفته شده برای توصیف مسائل بیان شده در این رساله نیز معماری NFV خواهد بود.
 
 \قسمت{هوش تجربی شبکه}
 
 \پاراگراف{}
 کارگروه \متن‌لاتین{ETSI ENI} در حال طراحی یک معماری مدیریت شبکه شناختی\پانویس{Cognitive Network Management}
-بر پایه حلقه بسته\پانویس{closed-loop} مکانیزم‌های هوش‌مصنوعی بر اساس سیاست‌های آگاه به متن\پانویس{Context-aware} و آگاه از داده‌ها
+بر پایه حلقه بسته\پانویس{closed-loop} مکانیزم‌های هوش‌مصنوعی بر اساس سیاست‌های آگاه به متن\پانویس{Context-aware} و مبتنی بر داده‌ها
 برای بهبود تجربه اپراتورهای شبکه می‌باشند.
+این معماری بر پایه حلقه کنترلی، نظارت--ارزیابی--تصمیم--عمل می‌باشد.
+این پروژه برای عملکردهای متنوع که مدیریت زیرساخت، عملیات‌های شبکه،
+هماهنگی سرویس‌ها و تضمین آن‌ها را پوشش می‌دهند،‌ تعریف شده است.
 
 \قسمت{نتیجه‌گیری}
 
