feat: Improve Concepts

--- a/problem/concepts.tex
+++ b/problem/concepts.tex
@@ -487,6 +487,16 @@ VNF-FG
 این پروژه برای عملکردهای متنوع که مدیریت زیرساخت، عملیات‌های شبکه،
 هماهنگی سرویس‌ها و تضمین آن‌ها را پوشش می‌دهند،‌ تعریف شده است.
 
+\پاراگراف{}
+از بین کارکردهای \متن‌لاتین{ENI} آنچه به \متن‌لاتین{ZSM} مرتبط است
+می‌توان به مدیریت هوشمند قطعه‌بندی شبکه، شناسایی و پیش‌بینی خطا در شبکه
+و تظمین نیازمندی‌های سخت سرویس اشاره کرد.
+
+\پاراگراف{}
+برخلاف \متن‌لاتین{ZSM} که بر تکنیک‌های خودکارسازی، مدیریت انتها به انتها سرویس و
+خودکارسازی کامل تمرکز دارد، \متن‌لاتین{ENI} بر تکنیک‌های هوش مصنوعی، مدیریت سیاست‌‌ها
+و مکانیزم‌های حلقه بسته تمرکز دارد.
+
 \قسمت{نتیجه‌گیری}
 
 \پاراگراف{}
