feat: Improve Concepts

--- a/problem/concepts.tex
+++ b/problem/concepts.tex
@@ -497,6 +497,11 @@ VNF-FG
 خودکارسازی کامل تمرکز دارد، \متن‌لاتین{ENI} بر تکنیک‌های هوش مصنوعی، مدیریت سیاست‌‌ها
 و مکانیزم‌های حلقه بسته تمرکز دارد.
 
+\پاراگراف{}
+قابلیت‌های پیشنهاد شده به وسیله‌ی \متن‌لاتین{ENI} مانند الگوریتم‌های یادگیری ماشین و هوش مصنوعی، \متن‌لاتین{intent policies} و مدیریت تفاهم‌نامه لایه سرویس می‌توانند
+به وسیله سرویس‌های هوشمند و محاسباتی \متن‌لاتین{ZSM} به منظور بهبود خودکارسازی شبکه
+و مدیریت سرویس‌ها استفاده شوند.
+
 \قسمت{نتیجه‌گیری}
 
 \پاراگراف{}
