feat: Update Problem Description

--- a/problem/concepts.tex
+++ b/problem/concepts.tex
@@ -479,6 +479,8 @@ VNF-FG
 
 \قسمت{هوش تجربی شبکه}
 
+\زیرقسمت{مقدمه}
+
 \پاراگراف{}
 کارگروه \متن‌لاتین{ETSI ENI} در حال طراحی یک معماری مدیریت شبکه شناختی\پانویس{Cognitive Network Management}
 بر پایه حلقه بسته\پانویس{closed-loop} مکانیزم‌های هوش‌مصنوعی بر اساس سیاست‌های آگاه به متن\پانویس{Context-aware} و مبتنی بر داده‌ها
@@ -486,6 +488,8 @@ VNF-FG
 این معماری بر پایه حلقه کنترلی، نظارت--ارزیابی--تصمیم--عمل می‌باشد.
 این پروژه برای عملکردهای متنوع که مدیریت زیرساخت، عملیات‌های شبکه،
 هماهنگی سرویس‌ها و تضمین آن‌ها را پوشش می‌دهند،‌ تعریف شده است.
+
+\زیرقسمت{در قیاس با مدیریت شبکه و سرویس بدون لمس}
 
 \پاراگراف{}
 از بین کارکردهای \متن‌لاتین{ENI} آنچه به \متن‌لاتین{ZSM} مرتبط است
@@ -496,11 +500,6 @@ VNF-FG
 برخلاف \متن‌لاتین{ZSM} که بر تکنیک‌های خودکارسازی، مدیریت انتها به انتها سرویس و
 خودکارسازی کامل تمرکز دارد، \متن‌لاتین{ENI} بر تکنیک‌های هوش مصنوعی، مدیریت سیاست‌‌ها
 و مکانیزم‌های حلقه بسته تمرکز دارد.
-
-\پاراگراف{}
-قابلیت‌های پیشنهاد شده به وسیله‌ی \متن‌لاتین{ENI} مانند الگوریتم‌های یادگیری ماشین و هوش مصنوعی، \متن‌لاتین{intent policies} و مدیریت تفاهم‌نامه لایه سرویس می‌توانند
-به وسیله سرویس‌های هوشمند و محاسباتی \متن‌لاتین{ZSM} به منظور بهبود خودکارسازی شبکه
-و مدیریت سرویس‌ها استفاده شوند.
 
 \قسمت{نتیجه‌گیری}
 
