feat: Update Concepts

--- a/problem/concepts.tex
+++ b/problem/concepts.tex
@@ -477,6 +477,12 @@ VNF-FG
 جداسازی کارکردها از سخت افزار نیز توسط معماری \متن‌لاتین{NFV} فراهم می‌شود.
 به همین دلیل بسیاری از تحقیقات انجام شده که در فصل بعد بررسی خواهد شد، از این ترکیب استفاده کرده اند و ورودی مسئله خود را یک گراف SFC که گره های آن VNF هستند در نظر گرفته اند. در حقیقت از آنجایی که گراف SFC می تواند توسط گراف VNF-FG نیز بیان شود معماری در نظر گرفته شده برای توصیف مسائل بیان شده در این رساله نیز معماری NFV خواهد بود.
 
+\قسمت{مدیریت شبکه و سرویس بدون لمس}
+
+\زیرقسمت{مقدمه}
+معماری \متن‌لاتین{ZSM} به گونه‌ای طراحی شده است که مدیریت تمام خودکار شبکه و سرویس‌ها را در یک محیط چند دامنه‌ای که شامل عملیات در محدوده‌های قانونی است را پشتیبانی کند.
+معماری به صورت ماژولار (ساخته شده از سرویس‌های مستقل و کافی)، قابل گسترش
+
 \قسمت{هوش تجربی شبکه}
 
 \زیرقسمت{مقدمه}
