feat: Update Concepts

--- a/problem/concepts.tex
+++ b/problem/concepts.tex
@@ -481,7 +481,8 @@ VNF-FG
 
 \زیرقسمت{مقدمه}
 معماری \متن‌لاتین{ZSM} به گونه‌ای طراحی شده است که مدیریت تمام خودکار شبکه و سرویس‌ها را در یک محیط چند دامنه‌ای که شامل عملیات در محدوده‌های قانونی است را پشتیبانی کند.
-معماری به صورت ماژولار (ساخته شده از سرویس‌های مستقل و کافی)، قابل گسترش
+معماری به صورت ماژولار (ساخته شده از سرویس‌های مستقل و کافی)، قابل گسترش (اجازه سرویس‌های جدید و قابلیت‌های نو)، مقیاس‌پذیر (فراهم کردن استقرار مستقل و مقیاس مستقل برای سرویس‌ها در جهت تحمل بار مدیریتی)
+و مقاوم در برابر خطاها
 
 \قسمت{هوش تجربی شبکه}
 
