feat: Update Concepts

--- a/problem/concepts.tex
+++ b/problem/concepts.tex
@@ -483,6 +483,10 @@ VNF-FG
 معماری \متن‌لاتین{ZSM} به گونه‌ای طراحی شده است که مدیریت تمام خودکار شبکه و سرویس‌ها را در یک محیط چند دامنه‌ای که شامل عملیات در محدوده‌های قانونی است را پشتیبانی کند.
 معماری به صورت ماژولار (ساخته شده از سرویس‌های مستقل و کافی)، قابل گسترش (اجازه سرویس‌های جدید و قابلیت‌های نو)، مقیاس‌پذیر (فراهم کردن استقرار مستقل و مقیاس مستقل برای سرویس‌ها در جهت تحمل بار مدیریتی)
 و مقاوم در برابر خطاها (سرویس‌ها به گونه‌ای طراحی شده‌اند که با خرابی‌های زیرساخت یا سرویس‌های مشکلی نداشته باشند).
+لازم به ذکر است که تمام قابلیت‌های مقیاس‌پذیری، تحمل خطا و گسترش‌پذیری نتیجه طراحی ماژولار می‌باشند.
+
+\زیرقسمت{معماری}
+معماری \متن‌لاتین{ZSM} در جهت پشتیبانی دغدغه‌های مدیریتی به تعداد دامنه مدیریتی تقسیم می‌شود.
 
 \قسمت{هوش تجربی شبکه}
 
