feat: Update Concepts

--- a/problem/concepts.tex
+++ b/problem/concepts.tex
@@ -486,7 +486,8 @@ VNF-FG
 لازم به ذکر است که تمام قابلیت‌های مقیاس‌پذیری، تحمل خطا و گسترش‌پذیری نتیجه طراحی ماژولار می‌باشند.
 
 \زیرقسمت{معماری}
-معماری \متن‌لاتین{ZSM} در جهت پشتیبانی دغدغه‌های مدیریتی به تعداد دامنه مدیریتی تقسیم می‌شود.
+معماری \متن‌لاتین{ZSM} در جهت پشتیبانی دغدغه‌های مدیریتی به تعداد دامنه مدیریتی تقسیم می‌شود. سرویس‌های دیتا مشترک اجازه می‌دهند پردازش داده از ذخیره‌سازی آن جدا شود.
+این امر دسترسی به داده‌ها و نشر بین دامنه‌ای آن‌ها را ساده‌تر می‌کند.
 
 \قسمت{هوش تجربی شبکه}
 
